fix small things